PKW-008-medium screen alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@
 }
 
 .bottom-row{
-  max-width: 60%;
+  max-width: 50%;
   margin-left: 230px;
 }
 
